--- a/Week 4 (HTML)/opdracht 4.1/style.css
+++ b/Week 4 (HTML)/opdracht 4.1/style.css
@@ -1,19 +1,24 @@
-h1 {
-    color: blue;
-    font-size: 24px;
-    font-weight: bold;
-    font-style: italic;
+html {
+    font-size: 62,5%;
 }
 
+
+
+h1 {
+    color: blue;
+    font-size: 2.4rem bold;
+    font-style: italic;
+}
+ 
 h2 {
     color: #0000ff;
-    font-size: 20px;
+    font-size: 2rem ;
     font-weight: bold;
 }
 
 h3 {
     color: teal;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: bold;
 }
 
@@ -22,10 +27,31 @@ p {
 }
 
 .p1 {
+    color: white;
     font-weight: bold;
 }
 
 a {
     color: #8A2BE2;
     text-decoration: none;
+}
+
+header {
+    height: 100vh;
+    width: 33vh;
+    background-image : url("./img/minecraft.jfif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+} 
+
+img {
+    height: 100vh;
+    width: 50vw;
+}
+
+article {
+    border: 0.2rem  solid black;
+    border-left-width: 1rem;
+    border-radius: 1rem;
 }
