--- a/Week 3 (HTML)/first_year_tcr_exercise/style.css
+++ b/Week 3 (HTML)/first_year_tcr_exercise/style.css
@@ -3,11 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   font-family: "Goldman", cursive;
+  background-color: black;
+  position: relative;
+  height: 100vh;
 }
 
 nav {
@@ -23,64 +28,74 @@ nav {
   position: fixed;
   top: 0
 }
+
 nav ul {
   display: flex;
   align-items: center;
   list-style-type: none;
 }
+
 nav li {
   font-size: 2.5rem;
   padding: 0 4rem 0 4rem;
 }
+
 nav a {
   color: white;
   text-decoration: none;
 }
+
 nav img {
   width: 5vw;
 }
 
-body {
-  background-image: url("./img/hacker achtergrond.avif");
-  background-color: black;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: 100vh;
-  background-size: 100vw;
+main {
+  clear: both;
 }
+
+.container {
+  background-image: url("./img/hacker achtergrond.avif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
+
 
 section {
   width: 100vw;
-  height:100vh;
+  height: 100vh;
 
 }
 
 footer {
   background: #00a8c7;
-padding: 20px;
-margin-top: 20px;
-color: #fff;
-text-align: center;
-left: 0;
-bottom: 0;
-width: 100%;
-position: fixed;
-  }
+  padding: 20px;
+  margin-top: 20px;
+  color: #fff;
+  text-align: center;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+}
 
 h2 {
   font-weight: bold;
   text-align: center;
   color: white;
 }
+
 p {
   color: white;
 }
 
-body {
-  position: relative;
-  height: 100vh;
-  top:30rem;
-}
 
 h1 {
   text-align: center;
@@ -90,15 +105,34 @@ h1 {
 
 a {
   color: white;
-  text
+
 }
 
-.html-logo {
-  float: left;  
-margin: 10rem;
+
+.html-text {
+  width: 40vw;
+  float: right
 }
 
-.html-text{
+.java-logo {
   float: right;
-  margin: 10rem;
+}
+
+.java-text {
+  width: 40vw;
+  float: left
+}
+
+.php-text {
+  width: 40vw;
+float: right;
+}
+
+.sql-text {
+  width: 40vw;
+  float: left;
+}
+
+.sql-logo {
+  float: right;
 }
