--- a/Week 3 (HTML)/first_year_tcr_exercise/style.css
+++ b/Week 3 (HTML)/first_year_tcr_exercise/style.css
@@ -15,6 +15,7 @@ body {
   height: 100vh;
 }
 
+
 nav {
   display: flex;
   width: 100%;
@@ -33,20 +34,46 @@ nav ul {
   display: flex;
   align-items: center;
   list-style-type: none;
+  overflow: hidden;
+  list-style-type: none;
 }
 
 nav li {
   font-size: 2.5rem;
   padding: 0 4rem 0 4rem;
+  float: left;
 }
 
 nav a {
   color: white;
   text-decoration: none;
+  text-align: center;
+  padding: 0.8rem 1rem;
+  display: inline-block;
 }
 
 nav img {
   width: 5vw;
+}
+
+.dropdown-content{
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 20vw;
+  z-index: 1;
+  box-shadow: 0rem 0.5rem 1rem 0rem rgba(0, 0, 0, 2);
+}
+
+.dropdown-content a{
+  color: #00a8c7;
+  padding: 0.8rem 1rem;
+  display: block;
+  text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 main {
