--- a/Week 3 (HTML)/first_year_tcr_exercise/style.css
+++ b/Week 3 (HTML)/first_year_tcr_exercise/style.css
@@ -66,10 +66,13 @@ nav img {
 }
 
 .dropdown-content a{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  align-content: stretch;
   color: #00a8c7;
   padding: 0.8rem 1rem;
-  display: block;
-  text-align: left;
 }
 
 .dropdown:hover a:hover {
